# DatosUC

./: .gitignore  README.md  build.sh  elecciones_feuc.csv  manage.py  pyproject.toml  render.yaml  requirements.txt
DatosUC/: settings.py
DatosUC/DatosUC/: asgi.py  settings.py  urls.py  wsgi.py
DatosUC/main/: admin.py  models.py  urls.py  views.py
DatosUC/main/management/commands/: load_feuc_consejo.py  load_feuc_results.py
DatosUC/main/migrations/: 0001_initial.py  0002_alter_elecciones_feuc_options.py
DatosUC/main/templates/main/: base.html  como_funciona.html  elecciones_feuc.html  index.html  success.html  votaciones_feuc.html
datos/: Consejo _FEUC.xlsx  ~$Consejo _FEUC.xlsx
datos/processed/: votaciones_consejo.csv
main/: admin.py
main/management/commands/: load_feuc_consejo.py  load_feuc_results.py
main/migrations/: 0003_consejo_feuc_votaciones_feuc.py
main/templates/main/: base.html  colaboradores.html  index.html  register.html
main/templates/main/elecciones/: elecciones_feuc.html
main/templates/main/votaciones/: votaciones_feuc.html
