[tool.poetry]
name = "datos-uc"
version = "0.1.0"
description = ""
authors = ["Dyotson https://github.com/Dyotson"]
readme = "README.md"
packages = [{include = "datos_uc"}]

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.7.2"
django = "4.2.2"
et-xmlfile = "1.1.0"
numpy = "1.25.0"
openpyxl = "3.1.2"
pandas = "2.0.2"
psycopg2 = "2.9.6"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3"
six = "1.16.0"
sqlparse = "0.4.4"
typing-extensions = "4.6.3"
tzdata = "2023.3"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
